--- a/Translation/UI.json
+++ b/Translation/UI.json
@@ -2,14 +2,23 @@
 	"UI.stat.HP": {
 		"en": "HP",
 		"fr": "PV",
+		"es": "PV",
+		"ch": "生命值",
+		"kr": "  ",
 	},
 	"UI.stat.MP": {
 		"en": "MP",
 		"fr": "PM",
+		"es": "  ",
+		"ch": "魔法值",
+		"kr": "  ",
 	},
 	"UI.stat.EXP": {
 		"en": "EXP",
 		"fr": "EXP",
+		"es": "  ",
+		"ch": "经验值",
+		"kr": "  ",
 	},
 	"UI.stat.ATK": {
 		"en": "Attack",
@@ -28,28 +37,44 @@
 	"UI.stat.DEF": {
 		"en": "Defence",
 		"fr": "Défense",
+		"es": "Defensa",
 		"ch": "防御",
 		"kr": "방어",
 	},
 	"UI.stat.DEF.short": {
 		"en": "DEF",
 		"fr": "DEF",
+		"es": "DEF",
+		"ch": "防御",
+		"kr": "  ",
 	},
 	"UI.stat.ENHCDMG": {
 		"en": "Enhanced Damage",
 		"fr": "Dégâts Améliorés",
+		"es": "Daño mejorado",
+		"ch": "伤害增强",
+		"kr": "강화 된 손상",
 	},
 	"UI.stat.ENHCDMG.short": {
 		"en": "ENHC DMG",
 		"fr": "DGTS AML",
+		"es": "  ",
+		"ch": "伤害增强",
+		"kr": "  ",
 	},
 	"UI.stat.DMGRD": {
 		"en": "Damage Reduction",
 		"fr": "Réduction de dégâts",
+		"es": "Reducción del daño",
+		"ch": "伤害减免",
+		"kr": "피해 감소",
 	},
 	"UI.stat.DMGRD.short": {
 		"en": "DMG RD",
 		"fr": "RD DGTS",
+		"es": "  ",
+		"ch": "伤害减免",
+		"kr": "  ",
 	},
 	"UI.stat.ATKSPD": {
 		"en": "Attack Speed",
@@ -68,109 +93,211 @@
 	"UI.stat.SKILLENHC": {
 		"en": "Skill Enhanced",
 		"fr": "Compétence améliorée",
+		"es": "Habilidad mejorada",
+		"ch": "技能增强",
+		"kr": "스킬 강화",
 	},
 	"UI.stat.SKILLENHC.short": {
 		"en": "Skill ENHC",
 		"fr": "Comp AML",
+		"es": "  ",
+		"ch": "技能增强",
+		"kr": "  ",
 	},
 	"UI.stat.ACC": {
 		"en": "Accuracy",
 		"fr": "Précision",
+		"es": "Exactitud",
+		"ch": "命中",
+		"kr": "정확성",
 	},
 	"UI.stat.ACC.short": {
 		"en": "ACC",
 		"fr": "PRE",
+		"es": "  ",
+		"ch": "命中",
+		"kr": "  ",
 	},
 	"UI.stat.SKILLACC": {
 		"en": "Skill Accuracy",
 		"fr": "Précision Compétence",
+		"es": "Precisión de habilidad",
+		"ch": "技能命中",
+		"kr": "스킬 정확도",
 	},
 	"UI.stat.SKILLACC.short": {
 		"en": "Skill ACC",
 		"fr": "PRE Comp",
+		"es": "  ",
+		"ch": "技能命中",
+		"kr": "  ",
 	},
 	"UI.stat.EVA": {
 		"en": "Evasion",
 		"fr": "Esquive",
+		"es": "Evasión",
+		"ch": "闪避",
+		"kr": "회피",
 	},
 	"UI.stat.EVA.short": {
 		"en": "EVA",
 		"fr": "ESQ",
+		"es": "  ",
+		"ch": "闪避",
+		"kr": "  ",
 	},
 	"UI.stat.SKILLEVA": {
 		"en": "Skill Evasion",
 		"fr": "Esquive Compétence",
+		"es": "Evasión de habilidades",
+		"ch": "技能闪避",
+		"kr": "스킬 회피",
 	},
 	"UI.stat.SKILLEVA.short": {
 		"en": "Skill EVA",
 		"fr": "ESQ Comp",
+		"es": "  ",
+		"ch": "技能闪避",
+		"kr": "  ",
 	},
 	"UI.stat.CRITACC": {
 		"en": "Crit Accuracy",
 		"fr": "Précision Critique",
+		"es": "Precisión crítica",
+		"ch": "暴击命中",
+		"kr": "치명타 정확도",
 	},
 	"UI.stat.CRITACC.short": {
 		"en": "CRIT ACC",
 		"fr": "PRE CRIT",
+		"es": "  ",
+		"ch": "暴击命中",
+		"kr": "  ",
 	},
 	"UI.stat.SKILLCRITACC": {
 		"en": "Skill Crit Accuracy",
 		"fr": "Précision Compétence Critique",
+		"es": "Precisión crítica de habilidad",
+		"ch": "技能暴击命中",
+		"kr": "스킬 치명타 정확도",
 	},
 	"UI.stat.SKILLCRITACC.short": {
 		"en": "Skill CRIT ACC",
 		"fr": "PRE Comp CRIT",
+		"es": "  ",
+		"ch": "技能暴击命中",
+		"kr": "  ",
 	},
 	"UI.stat.CRITEVA": {
 		"en": "Crit Evasion",
 		"fr": "Esquive Critique",
+		"es": "Evasión de críticos",
+		"ch": "暴击闪避",
+		"kr": "치명타 회피",
 	},
 	"UI.stat.CRITEVA.short": {
 		"en": "CRIT EVA",
 		"fr": "ESQ CRIT",
+		"es": "  ",
+		"ch": "暴击闪避",
+		"kr": "  ",
 	},
 	"UI.stat.SKILLCRITEVA": {
 		"en": "Skill Crit Evasion",
 		"fr": "Esquive Compétence Critique",
+		"es": "Evasión de críticos de habilidad",
+		"ch": "技能暴击闪避",
+		"kr": "스킬 치명타 회피",
 	},
 	"UI.stat.SKILLCRITEVA.short": {
 		"en": "Skill CRIT EVA",
 		"fr": "ESQ Comp CRIT",
+		"es": "",
+		"ch": "技能暴击闪避",
+		"kr": "",
 	},
 	"UI.stat.CRITENCH": {
 		"en": "Crit Enhanced",
+		"fr": "Amélioration Critique",
+		"es": "Crit mejorado",
+		"ch": "暴击增强",
+		"kr": "!치명타 향상",
 	},
 	"UI.stat.CRITENCH.short": {
 		"en": "CRIT ENCH",
+		"fr": " ",
+		"es": "  ",
+		"ch": "暴击增强",
+		"kr": "  ",
 	},
 	"UI.stat.SKILLCRITENCH": {
 		"en": "Skill Crit Enhanced",
+		"fr": "Compétence Critique Ameliorée",
+		"es": "Habilidad crítica mejorada",
+		"ch": "技能暴击增强",
+		"kr": "스킬 크리티컬 강화",
 	},
 	"UI.stat.SKILLCRITENCH.short": {
 		"en": "Skill CRIT ENCH",
+		"fr": " ",
+		"es": "  ",
+		"ch": "技能暴击增强",
+		"kr": "  ",
 	},
 	"UI.stat.CRITRD": {
 		"en": "Crit Reduction",
+		"fr": "Reduction Critique",
+		"es": "Reducción de críticos",
+		"ch": "暴击减免",
+		"kr": "치명타 감소",
 	},
 	"UI.stat.CRITRD.short": {
 		"en": "CRIT RD",
+		"fr": " ",
+		"es": "  ",
+		"ch": "暴击减免",
+		"kr": "  ",
 	},
 	"UI.stat.SKILLCRITRD": {
 		"en": "Skill Crit Reduction",
+		"fr": "Reduction Compétence Critique",
+		"es": "Reducción de críticos de habilidad",
+		"ch": "技能暴击减免",
+		"kr": "스킬 크리티컬 감소",
 	},
 	"UI.stat.SKILLCRITRD.short": {
 		"en": "Skill CRIT RD",
+		"fr": " ",
+		"es": "  ",
+		"ch": "技能暴击减免",
+		"kr": "  ",
 	},
 	"UI.stat.HOLYATK": {
 		"en": "Holy Attack",
+		"fr": "Attaque sacrée",
+		"es": "Ataque sagrado",
+		"ch": "神圣攻击",
+		"kr": "신성한 공격",
 	},
 	"UI.stat.HOLYATK.short": {
 		"en": "Holy ATK",
+		"fr": " ",
+		"es": "  ",
+		"ch": "神圣攻击",
+		"kr": "  ",
 	},
 	"UI.stat.LUCK": {
 		"en": "Luck",
+		"fr": "Chance",
+		"es": "Suerte",
+		"ch": "幸运值",
+		"kr": "운",
 	},
 	"UI.stat.LUCK.short": {
 		"en": "Luck",
+		"fr": " ",
+		"es": "  ",
+		"ch": "幸运值",
+		"kr": "  ",
 	}
 }
