--- a/Translation/skills.json
+++ b/Translation/skills.json
@@ -1,6 +1,792 @@
 {
-	"skills.mage.---":{
-		"en": "",
+	"skills.mage.FIRE_BOLT.name":{
+		"en": "Fire Bolt",
+		"fr": "",
+		"es": "",
+		"ch": "",
+		"kr": "",
+	},
+	"skills.mage.FIRE_BOLT.description":{
+		"en": "Strikes a single target with a fire bolt, dealing massive damage.",
+		"fr": "",
+		"es": "",
+		"ch": "",
+		"kr": "",
+	},
+	"skills.mage.FIRE_BOLT.effect":{
+		"en": "Inflicts {0}% damage and additional {1} skill damage",
+		"fr": "",
+		"es": "",
+		"ch": "",
+		"kr": "",
+	},
+	
+	"skills.mage.MAGIC_BOLT.name":{
+		"en": "Magic Bolt",
+		"fr": "",
+		"es": "",
+		"ch": "",
+		"kr": "",
+	},
+	"skills.mage.MAGIC_BOLT.description":{
+		"en": "Launches multiple bolts at the target, dealing magic damage.",
+		"fr": "",
+		"es": "",
+		"ch": "",
+		"kr": "",
+	},
+	"skills.mage.MAGIC_BOLT.effect":{
+		"en": "Launch 3 bolts to deal {0}% more damage and aditional {1} skill damage.",
+		"fr": "",
+		"es": "",
+		"ch": "",
+		"kr": "",
+	},
+	
+	"skills.mage.ENERGY.name":{
+		"en": "Energy",
+		"fr": "",
+		"es": "",
+		"ch": "",
+		"kr": "",
+	},
+	"skills.mage.ENERGY.description":{
+		"en": "Increases mage's max MP.",
+		"fr": "",
+		"es": "",
+		"ch": "",
+		"kr": "",
+	},
+	"skills.mage.ENERGY.effect":{
+		"en": "Increases base MP by {0}%",
+		"fr": "",
+		"es": "",
+		"ch": "",
+		"kr": "",
+	},
+	
+	"skills.mage.METEOR_DROP.name":{
+		"en": "Meteor Drop",
+		"fr": "",
+		"es": "",
+		"ch": "",
+		"kr": "",
+	},
+	"skills.mage.METEOR_DROP.description":{
+		"en": "Deals AOE by manipulating destructive meteors",
+		"fr": "",
+		"es": "",
+		"ch": "",
+		"kr": "",
+	},
+	"skills.mage.METEOR_DROP.effect":{
+		"en": "Each stacked attack deals {0}% Damage",
+		"fr": "",
+		"es": "",
+		"ch": "",
+		"kr": "",
+	},
+	
+	"skills.mage.AWAKEN.name":{
+		"en": "Awaken",
+		"fr": "",
+		"es": "",
+		"ch": "",
+		"kr": "",
+	},
+	"skills.mage.AWAKEN.description":{
+		"en": "Recovers MP Swiftly",
+		"fr": "",
+		"es": "",
+		"ch": "",
+		"kr": "",
+	},
+	"skills.mage.AWAKEN.effect":{
+		"en": "Recover MP by {0}",
+		"fr": "",
+		"es": "",
+		"ch": "",
+		"kr": "",
+	},
+	
+	"skills.mage.THUNDER.name":{
+		"en": "Thunder",
+		"fr": "",
+		"es": "",
+		"ch": "",
+		"kr": "",
+	},
+	"skills.mage.THUNDER.description":{
+		"en": "Strikes a single target heavily with thunder...",
+		"fr": "",
+		"es": "",
+		"ch": "",
+		"kr": "",
+	},
+	"skills.mage.THUNDER.effect":{
+		"en": "Inflicts {0}% more damage and an additional {1} Skill damage.",
+		"fr": "",
+		"es": "",
+		"ch": "",
+		"kr": "",
+	},
+	
+	"skills.mage.FIRE_WALL.name":{
+		"en": "Fire Wall",
+		"fr": "",
+		"es": "",
+		"ch": "",
+		"kr": "",
+	},
+	"skills.mage.FIRE_WALL.description":{
+		"en": "Harms and slows down enemies in the area of effect by conjuring flames.",
+		"fr": "",
+		"es": "",
+		"ch": "",
+		"kr": "",
+	},
+	"skills.mage.FIRE_WALL.effect":{
+		"en": "Deals {0}% damage and an additional {1} Skill damage each second. Lasts 15 sec.",
+		"fr": "",
+		"es": "",
+		"ch": "",
+		"kr": "",
+	},
+	
+	"skills.mage.FREEZE.name":{
+		"en": "Freeze",
+		"fr": "",
+		"es": "",
+		"ch": "",
+		"kr": "",
+	},
+	"skills.mage.FREEZE.description":{
+		"en": "Freezes the target. Target is unfrozen when it takes damage.",
+		"fr": "",
+		"es": "",
+		"ch": "",
+		"kr": "",
+	},
+	"skills.mage.FREEZE.effect":{
+		"en": "Deals {0}% damage and freezes the target for {1} seconds.",
+		"fr": "",
+		"es": "",
+		"ch": "",
+		"kr": "",
+	},
+	
+	"skills.mage.MAGIC_MASTERY.name":{
+		"en": "Magic Mastery",
+		"fr": "",
+		"es": "",
+		"ch": "",
+		"kr": "",
+	},
+	"skills.mage.MAGIC_MASTERY.description":{
+		"en": "Increases Magic Crit Chance and Crit damage.",
+		"fr": "",
+		"es": "",
+		"ch": "",
+		"kr": "",
+	},
+	"skills.mage.MAGIC_MASTERY.effect":{
+		"en": "Increases skill Crit Chance by {0}%. Also increases Skill Crit damage by {1}%.",
+		"fr": "",
+		"es": "",
+		"ch": "",
+		"kr": "",
+	},
+	
+	"skills.mage.MAGIC_SHIELD.name":{
+		"en": "Magic Shield",
+		"fr": "",
+		"es": "",
+		"ch": "",
+		"kr": "",
+	},
+	"skills.mage.MAGIC_SHIELD.description":{
+		"en": "Creates a magic shield to absorb incoming damage.",
+		"fr": "",
+		"es": "",
+		"ch": "",
+		"kr": "",
+	},
+	"skills.mage.MAGIC_SHIELD.effect":{
+		"en": "Magic shield absorbs {0} incoming damage. Lasts up to 20 sec.",
+		"fr": "",
+		"es": "",
+		"ch": "",
+		"kr": "",
+	},
+	
+	"skills.mage.SILENCE_CURSE.name":{
+		"en": "Silence Curse",
+		"fr": "",
+		"es": "",
+		"ch": "",
+		"kr": "",
+	},
+	"skills.mage.SILENCE_CURSE.description":{
+		"en": "Attacks the target, disabling it from using skills.",
+		"fr": "",
+		"es": "",
+		"ch": "",
+		"kr": "",
+	},
+	"skills.mage.SILENCE_CURSE.effect":{
+		"en": "Inflicting {0}% more damage and an additional {1} Skill damage. Lasts {2} sec.",
+		"fr": "",
+		"es": "",
+		"ch": "",
+		"kr": "",
+	},
+	
+	"skills.mage.FROST_BREATH.name":{
+		"en": "Frost Breath",
+		"fr": "",
+		"es": "",
+		"ch": "",
+		"kr": "",
+	},
+	"skills.mage.FROST_BREATH.description":{
+		"en": "Causes massive damage to all enemies in the area of effect. Deals additional damage to frozen targets.",
+		"fr": "",
+		"es": "",
+		"ch": "",
+		"kr": "",
+	},
+	"skills.mage.FROST_BREATH.effect":{
+		"en": "Inflicts {0}% more damage and an additional {1} Skill damage.",
+		"fr": "",
+		"es": "",
+		"ch": "",
+		"kr": "",
+	},
+	
+	
+	"skills.ranger.TRIPLE_SHOT.name":{
+		"en": "Triple Shot",
+		"fr": "",
+		"es": "",
+		"ch": "",
+		"kr": "",
+	},
+	"skills.ranger.TRIPLE_SHOT.description":{
+		"en": "Shoots at a single target to deal serious damage.",
+		"fr": "",
+		"es": "",
+		"ch": "",
+		"kr": "",
+	},
+	"skills.ranger.TRIPLE_SHOT.effect":{
+		"en": "Inflicts {0}% more damage and an additional {1} Skill damage.",
+		"fr": "",
+		"es": "",
+		"ch": "",
+		"kr": "",
+	},
+	
+	"skills.ranger.POISON_ARROW.name":{
+		"en": "Poison Arrow",
+		"fr": "",
+		"es": "",
+		"ch": "",
+		"kr": "",
+	},
+	"skills.ranger.POISON_ARROW.description":{
+		"en": "Poisons the target and slows it down.",
+		"fr": "",
+		"es": "",
+		"ch": "",
+		"kr": "",
+	},
+	"skills.ranger.POISON_ARROW.effect":{
+		"en": "Lowers target's SPD by {0}%. Target takes {1}% more damage and an additional {2} Skill damage over 4 sec.",
+		"fr": "",
+		"es": "",
+		"ch": "",
+		"kr": "",
+	},
+	
+	"skills.ranger.EAGLE_EYE.name":{
+		"en": "Eagle Eye",
+		"fr": "",
+		"es": "",
+		"ch": "",
+		"kr": "",
+	},
+	"skills.ranger.EAGLE_EYE.description":{
+		"en": "Provides the Ranger with an Attack Increase to distant targets.",
+		"fr": "",
+		"es": "",
+		"ch": "",
+		"kr": "",
+	},
+	"skills.ranger.EAGLE_EYE.effect":{
+		"en": "Common attacks deal {0}% Enhanced Damage to targets more than 8 yrds from you.",
+		"fr": "",
+		"es": "",
+		"ch": "",
+		"kr": "",
+	},
+	
+	"skills.ranger.CHARGED_SHOT.name":{
+		"en": "Charged Shot",
+		"fr": "",
+		"es": "",
+		"ch": "",
+		"kr": "",
+	},
+	"skills.ranger.CHARGED_SHOT.description":{
+		"en": "Strikes the enemy with charged arrows.",
+		"fr": "",
+		"es": "",
+		"ch": "",
+		"kr": "",
+	},
+	"skills.ranger.CHARGED_SHOT.effect":{
+		"en": "Each stacked attack deals {0}% damage.",
+		"fr": "",
+		"es": "",
+		"ch": "",
+		"kr": "",
+	},
+	
+	"skills.ranger.HASTE.name":{
+		"en": "Haste",
+		"fr": "",
+		"es": "",
+		"ch": "",
+		"kr": "",
+	},
+	"skills.ranger.HASTE.description":{
+		"en": "Increases Ranger's Movement Speed.",
+		"fr": "",
+		"es": "",
+		"ch": "",
+		"kr": "",
+	},
+	"skills.ranger.HASTE.effect":{
+		"en": "Lasts {0} sec. Increases SPD by {1}.",
+		"fr": "",
+		"es": "",
+		"ch": "",
+		"kr": "",
+	},
+	
+	"skills.ranger.MULTI_ARROW.name":{
+		"en": "Multi-Arrow",
+		"fr": "",
+		"es": "",
+		"ch": "",
+		"kr": "",
+	},
+	"skills.ranger.MULTI_ARROW.description":{
+		"en": "Shoots multiple arrows to attack all enemies in a certain range.",
+		"fr": "",
+		"es": "",
+		"ch": "",
+		"kr": "",
+	},
+	"skills.ranger.MULTI_ARROW.effect":{
+		"en": "Inflicts {0}% more damage and an additional {1} Skill damage.",
+		"fr": "",
+		"es": "",
+		"ch": "",
+		"kr": "",
+	},
+	
+	"skills.ranger.CRACK_SHOT.name":{
+		"en": "Crack Shot",
+		"fr": "",
+		"es": "",
+		"ch": "",
+		"kr": "",
+	},
+	"skills.ranger.CRACK_SHOT.description":{
+		"en": "Increases Ranger's Attack Speed for a short period of time, during which the Ranger cannot move.",
+		"fr": "",
+		"es": "",
+		"ch": "",
+		"kr": "",
+	},
+	"skills.ranger.CRACK_SHOT.effect":{
+		"en": "Lasts {0} sec. Increases ATK SPD by {1}. Effect disappears after {2} attacks.",
+		"fr": "",
+		"es": "",
+		"ch": "",
+		"kr": "",
+	},
+	
+	"skills.ranger.EVASION.name":{
+		"en": "Evasion",
+		"fr": "",
+		"es": "",
+		"ch": "",
+		"kr": "",
+	},
+	"skills.ranger.EVASION.description":{
+		"en": "Enhances Ranger's evasive maneuvers.",
+		"fr": "",
+		"es": "",
+		"ch": "",
+		"kr": "",
+	},
+	"skills.ranger.EVASION.effect":{
+		"en": "Increases Evasion and Skill Evasion by {0}%. Lasts 6 sec.",
+		"fr": "",
+		"es": "",
+		"ch": "",
+		"kr": "",
+	},
+	
+	"skills.ranger.PRECISION.name":{
+		"en": "Precision",
+		"fr": "",
+		"es": "",
+		"ch": "",
+		"kr": "",
+	},
+	"skills.ranger.PRECISION.description":{
+		"en": "Increases Ranger's Crit Chance and Attack Range. Passive.",
+		"fr": "",
+		"es": "",
+		"ch": "",
+		"kr": "",
+	},
+	"skills.ranger.PRECISION.effect":{
+		"en": "Increases Crit Chance by {0}%. Increases Attack Range by {1} yrds.",
+		"fr": "",
+		"es": "",
+		"ch": "",
+		"kr": "",
+	},
+	
+	"skills.ranger.PARALYZE_TRAP.name":{
+		"en": "Paralyze Trap",
+		"fr": "",
+		"es": "",
+		"ch": "",
+		"kr": "",
+	},
+	"skills.ranger.PARALYZE_TRAP.description":{
+		"en": "Confines the enemy to a trap.",
+		"fr": "",
+		"es": "",
+		"ch": "",
+		"kr": "",
+	},
+	"skills.ranger.PARALYZE_TRAP.effect":{
+		"en": "Trap lasts 15 sec. Paralyzes the target for {0} sec.",
+		"fr": "",
+		"es": "",
+		"ch": "",
+		"kr": "",
+	},
+	
+	"skills.ranger.HOMING_ARROW.name":{
+		"en": "Homing Arrow",
+		"fr": "",
+		"es": "",
+		"ch": "",
+		"kr": "",
+	},
+	"skills.ranger.HOMING_ARROW.description":{
+		"en": "Instantly shoots multiple homing arrows at a single target, dealing a large amount of damage.",
+		"fr": "",
+		"es": "",
+		"ch": "",
+		"kr": "",
+	},
+	"skills.ranger.HOMING_ARROW.effect":{
+		"en": "Inflicts {0}% more DMG and an additional {1} Skill DMG.",
+		"fr": "",
+		"es": "",
+		"ch": "",
+		"kr": "",
+	},
+	
+	"skills.ranger.IMPACT_SHOT.name":{
+		"en": "Impact Shot",
+		"fr": "",
+		"es": "",
+		"ch": "",
+		"kr": "",
+	},
+	"skills.ranger.IMPACT_SHOT.description":{
+		"en": "Knocks the target back with powerful shots. Has a better chance to Paralyze the target for 3 seconds as skill levels.",
+		"fr": "",
+		"es": "",
+		"ch": "",
+		"kr": "",
+	},
+	"skills.ranger.IMPACT_SHOT.effect":{
+		"en": "Deals {0} Skill DMG. Knock-back distance: {1}.",
+		"fr": "",
+		"es": "",
+		"ch": "",
+		"kr": "",
+	},
+	
+	
+	"skills.warrior.SLAM.name":{
+		"en": "Slam",
+		"fr": "",
+		"es": "",
+		"ch": "",
+		"kr": "",
+	},
+	"skills.warrior.SLAM.description":{
+		"en": "Attack a target with your weapon, dealing massive damage.",
+		"fr": "",
+		"es": "",
+		"ch": "",
+		"kr": "",
+	},
+	"skills.warrior.SLAM.effect":{
+		"en": "Inflicts {0}% more damage and an additional {1} Skill damage.",
+		"fr": "",
+		"es": "",
+		"ch": "",
+		"kr": "",
+	},
+	
+	"skills.warrior.AIR_SLASH.name":{
+		"en": "Air Slash",
+		"fr": "",
+		"es": "",
+		"ch": "",
+		"kr": "",
+	},
+	"skills.warrior.AIR_SLASH.description":{
+		"en": "Approach a target instantly to deliver a devastating strike.",
+		"fr": "",
+		"es": "",
+		"ch": "",
+		"kr": "",
+	},
+	"skills.warrior.AIR_SLASH.effect":{
+		"en": "Inflicts {0}% more damage and an additional {1} Skill damage. Range: {2} yds.",
+		"fr": "",
+		"es": "",
+		"ch": "",
+		"kr": "",
+	},
+	
+	"skills.warrior.TENACITY.name":{
+		"en": "Tenacity",
+		"fr": "",
+		"es": "",
+		"ch": "",
+		"kr": "",
+	},
+	"skills.warrior.TENACITY.description":{
+		"en": "Increases Warrior’s max HP, for better survivability against monsters.",
+		"fr": "",
+		"es": "",
+		"ch": "",
+		"kr": "",
+	},
+	"skills.warrior.TENACITY.effect":{
+		"en": "Increases Warrior's base HP by {0}%",
+		"fr": "",
+		"es": "",
+		"ch": "",
+		"kr": "",
+	},
+	
+	"skills.warrior.PITCH.name":{
+		"en": "Pitch",
+		"fr": "",
+		"es": "",
+		"ch": "",
+		"kr": "",
+	},
+	"skills.warrior.PITCH.description":{
+		"en": "Strikes target with a heavy ranged attack.",
+		"fr": "",
+		"es": "",
+		"ch": "",
+		"kr": "",
+	},
+	"skills.warrior.PITCH.effect":{
+		"en": "Each stacked attack deals {0}% damage",
+		"fr": "",
+		"es": "",
+		"ch": "",
+		"kr": "",
+	},
+	
+	"skills.warrior.BASH.name":{
+		"en": "Bash",
+		"fr": "",
+		"es": "",
+		"ch": "",
+		"kr": "",
+	},
+	"skills.warrior.BASH.description":{
+		"en": "Deals damage to the target and slows it down.",
+		"fr": "",
+		"es": "",
+		"ch": "",
+		"kr": "",
+	},
+	"skills.warrior.BASH.effect":{
+		"en": "Inflicts {0} Skill damage. Lowers target's SPD by {1}% for {2} sec.",
+		"fr": "",
+		"es": "",
+		"ch": "",
+		"kr": "",
+	},
+	
+	"skills.warrior.WAR_CRY.name":{
+		"en": "War Cry",
+		"fr": "",
+		"es": "",
+		"ch": "",
+		"kr": "",
+	},
+	"skills.warrior.WAR_CRY.description":{
+		"en": "Taunts nearby enemies and lowers their Defense. Causes high threat against certain monsters. Suitable for tanking.",
+		"fr": "",
+		"es": "",
+		"ch": "",
+		"kr": "",
+	},
+	"skills.warrior.WAR_CRY.effect":{
+		"en": "Causes {0} Skill damage to nearby enemies. Lowers enemies DMG RD by {1}%. Lasts {2} sec.",
+		"fr": "",
+		"es": "",
+		"ch": "",
+		"kr": "",
+	},
+	
+	"skills.warrior.SURGE.name":{
+		"en": "Surge",
+		"fr": "",
+		"es": "",
+		"ch": "",
+		"kr": "",
+	},
+	"skills.warrior.SURGE.description":{
+		"en": "Attacks enemies in a line in front of you.",
+		"fr": "",
+		"es": "",
+		"ch": "",
+		"kr": "",
+	},
+	"skills.warrior.SURGE.effect":{
+		"en": "Inflicts {0}% more damage and an additional {1} Skill damage",
+		"fr": "",
+		"es": "",
+		"ch": "",
+		"kr": "",
+	},
+	
+	"skills.warrior.BLOCK.name":{
+		"en": "Block",
+		"fr": "",
+		"es": "",
+		"ch": "",
+		"kr": "",
+	},
+	"skills.warrior.BLOCK.description":{
+		"en": "Warrior takes less damage from the next couple attacks.",
+		"fr": "",
+		"es": "",
+		"ch": "",
+		"kr": "",
+	},
+	"skills.warrior.BLOCK.effect":{
+		"en": "Increases DMG RD by {0}%. Character blocks 2 incoming attacks within 5 sec.",
+		"fr": "",
+		"es": "",
+		"ch": "",
+		"kr": "",
+	},
+	
+	"skills.warrior.CRIT_ENHANCE.name":{
+		"en": "Crit Enhance",
+		"fr": "",
+		"es": "",
+		"ch": "",
+		"kr": "",
+	},
+	"skills.warrior.CRIT_ENHANCE.description":{
+		"en": "Increases the amount of Crit damage dealt.",
+		"fr": "",
+		"es": "",
+		"ch": "",
+		"kr": "",
+	},
+	"skills.warrior.CRIT_ENHANCE.effect":{
+		"en": "Increases a Warrior's Common Attack Crit Damage by {0}%",
+		"fr": "",
+		"es": "",
+		"ch": "",
+		"kr": "",
+	},
+	
+	"skills.warrior.CRIT_SLASH.name":{
+		"en": "Crit Slash",
+		"fr": "",
+		"es": "",
+		"ch": "",
+		"kr": "",
+	},
+	"skills.warrior.CRIT_SLASH.description":{
+		"en": "Increases the Crit Chance of your next common attack.",
+		"fr": "",
+		"es": "",
+		"ch": "",
+		"kr": "",
+	},
+	"skills.warrior.CRIT_SLASH.effect":{
+		"en": "Increases Crit Chance and Hit Chance by {0}% for next 3 common attacks. Lasts up to {1} sec.",
+		"fr": "",
+		"es": "",
+		"ch": "",
+		"kr": "",
+	},
+	
+	"skills.warrior.RAGE.name":{
+		"en": "Rage",
+		"fr": "",
+		"es": "",
+		"ch": "",
+		"kr": "",
+	},
+	"skills.warrior.RAGE.description":{
+		"en": "Activates a Warrior’s rage.",
+		"fr": "",
+		"es": "",
+		"ch": "",
+		"kr": "",
+	},
+	"skills.warrior.RAGE.effect":{
+		"en": "Cooldown: {0} sec. Greatly enhances combat efficiency for {1} sec. Increases SPD by 30% and ATK SPD by 100%",
+		"fr": "",
+		"es": "",
+		"ch": "",
+		"kr": "",
+	},
+	
+	"skills.warrior.TERMINATE.name":{
+		"en": "Terminate",
+		"fr": "",
+		"es": "",
+		"ch": "",
+		"kr": "",
+	},
+	"skills.warrior.TERMINATE.description":{
+		"en": "An ultimate strike that deals a high amount of damage to one target.",
+		"fr": "",
+		"es": "",
+		"ch": "",
+		"kr": "",
+	},
+	"skills.warrior.TERMINATE.effect":{
+		"en": "Inflicts {0}% more DMG and an additional {1} Skill DMG",
 		"fr": "",
 		"es": "",
 		"ch": "",
