Added Russian translation

--- a/Translation/UI.json
+++ b/Translation/UI.json
@@ -5,7 +5,7 @@
 		"es": "",
 		"ch": "",
 		"kr": "",
-		"ru": "",
+		"ru": "Вы говорите с %s",
 		"tr": "",
 		"de": "",
 		"ja": "",
@@ -22,7 +22,7 @@
 		"es": "",
 		"ch": "",
 		"kr": "",
-		"ru": "",
+		"ru": "%s говорит",
 		"tr": "",
 		"de": "",
 		"ja": "",
@@ -40,7 +40,7 @@
 		"es": "",
 		"ch": "",
 		"kr": "",
-		"ru": "",
+		"ru": "Локальный",
 		"tr": "",
 		"de": "",
 		"ja": "",
@@ -57,7 +57,7 @@
 		"es": "",
 		"ch": "",
 		"kr": "",
-		"ru": "",
+		"ru": "Мировой",
 		"tr": "",
 		"de": "",
 		"ja": "",
@@ -74,7 +74,7 @@
 		"es": "",
 		"ch": "",
 		"kr": "",
-		"ru": "",
+		"ru": "Уведомления",
 		"tr": "",
 		"de": "",
 		"ja": "",
@@ -91,7 +91,7 @@
 		"es": "",
 		"ch": "",
 		"kr": "",
-		"ru": "",
+		"ru": "Личный",
 		"tr": "",
 		"de": "",
 		"ja": "",
@@ -102,13 +102,13 @@
 		"pl": "",
 		"th": "",
 	},
-	"UI.chat.channel.guild":{
+	"UI.chat.channel.guild": {
 		"en": "Guild",
 		"fr": "Guilde",
 		"es": "",
 		"ch": "",
 		"kr": "",
-		"ru": "",
+		"ru": "Гильдия",
 		"tr": "",
 		"de": "",
 		"ja": "",
@@ -117,7 +117,7 @@
 		"ar": "",
 		"it": "",
 		"pl": "",
-		"th": "",
+		"th": ""
 	},
 	"UI.chat.channel.group":{
 		"en": "Group",
@@ -125,7 +125,7 @@
 		"es": "",
 		"ch": "",
 		"kr": "",
-		"ru": "",
+		"ru": "Группа",
 		"tr": "",
 		"de": "",
 		"ja": "",
@@ -142,7 +142,7 @@
 		"es": "",
 		"ch": "",
 		"kr": "",
-		"ru": "",
+		"ru": "Система",
 		"tr": "",
 		"de": "",
 		"ja": "",
@@ -160,7 +160,7 @@
 		"es": "PV",
 		"ch": "生命值",
 		"kr": "",
-		"ru": "",
+		"ru": "Жизни",
 		"tr": "",
 		"de": "",
 		"ja": "",
@@ -177,7 +177,7 @@
 		"es": "",
 		"ch": "魔法值",
 		"kr": "",
-		"ru": "",
+		"ru": "Мана",
 		"tr": "",
 		"de": "",
 		"ja": "",
@@ -194,7 +194,7 @@
 		"es": "",
 		"ch": "经验值",
 		"kr": "",
-		"ru": "",
+		"ru": "ОПТ",
 		"tr": "",
 		"de": "",
 		"ja": "",
@@ -211,7 +211,7 @@
 		"es": "",
 		"ch": "",
 		"kr": "",
-		"ru": "",
+		"ru": "Скорость",
 		"tr": "",
 		"de": "",
 		"ja": "",
@@ -228,7 +228,7 @@
 		"es": "Ataque",
 		"ch": "攻击",
 		"kr": "공격",
-		"ru": "",
+		"ru": "Атака",
 		"tr": "",
 		"de": "",
 		"ja": "",
@@ -245,7 +245,7 @@
 		"es": "ATQ",
 		"ch": "攻击",
 		"kr": "공격",
-		"ru": "",
+		"ru": "АТК",
 		"tr": "",
 		"de": "",
 		"ja": "",
@@ -262,7 +262,7 @@
 		"es": "Defensa",
 		"ch": "防御",
 		"kr": "방어",
-		"ru": "",
+		"ru": "Защита",
 		"tr": "",
 		"de": "",
 		"ja": "",
@@ -279,7 +279,7 @@
 		"es": "DEF",
 		"ch": "防御",
 		"kr": "",
-		"ru": "",
+		"ru": "ЗЩТ",
 		"tr": "",
 		"de": "",
 		"ja": "",
@@ -296,7 +296,7 @@
 		"es": "Daño mejorado",
 		"ch": "伤害增强",
 		"kr": "강화 된 손상",
-		"ru": "",
+		"ru": "Повышенный Урон",
 		"tr": "",
 		"de": "",
 		"ja": "",
@@ -305,7 +305,7 @@
 		"ar": "",
 		"it": "",
 		"pl": "",
-		"th": "",
+		"th": ""
 	},
 	"UI.stat.ENHCDMG.short": {
 		"en": "ENHC DMG",
@@ -313,7 +313,7 @@
 		"es": "",
 		"ch": "伤害增强",
 		"kr": "",
-		"ru": "",
+		"ru": "ПВШ УРН",
 		"tr": "",
 		"de": "",
 		"ja": "",
@@ -330,7 +330,7 @@
 		"es": "Reducción del daño",
 		"ch": "伤害减免",
 		"kr": "피해 감소",
-		"ru": "",
+		"ru": "Снижение урона",
 		"tr": "",
 		"de": "",
 		"ja": "",
@@ -347,7 +347,7 @@
 		"es": "",
 		"ch": "伤害减免",
 		"kr": "",
-		"ru": "",
+		"ru": "СНЖ УРН",
 		"tr": "",
 		"de": "",
 		"ja": "",
@@ -364,7 +364,7 @@
 		"es": "Velocidad de ataque",
 		"ch": "攻击速度",
 		"kr": "공격 속도",
-		"ru": "",
+		"ru": "Скорость атаки",
 		"tr": "",
 		"de": "",
 		"ja": "",
@@ -381,7 +381,7 @@
 		"es": "ATQ VEL",
 		"ch": "攻击速度",
 		"kr": "공격 속도",
-		"ru": "",
+		"ru": "СКР АТК",
 		"tr": "",
 		"de": "",
 		"ja": "",
@@ -398,7 +398,7 @@
 		"es": "Habilidad mejorada",
 		"ch": "技能增强",
 		"kr": "스킬 강화",
-		"ru": "",
+		"ru": "Повышение навыка",
 		"tr": "",
 		"de": "",
 		"ja": "",
@@ -415,7 +415,7 @@
 		"es": "",
 		"ch": "技能增强",
 		"kr": "",
-		"ru": "",
+		"ru": "ПВШ НВК",
 		"tr": "",
 		"de": "",
 		"ja": "",
@@ -432,7 +432,7 @@
 		"es": "Exactitud",
 		"ch": "命中",
 		"kr": "정확성",
-		"ru": "",
+		"ru": "Точность",
 		"tr": "",
 		"de": "",
 		"ja": "",
@@ -441,7 +441,7 @@
 		"ar": "",
 		"it": "",
 		"pl": "",
-		"th": "",
+		"th": ""
 	},
 	"UI.stat.ACC.short": {
 		"en": "ACC",
@@ -449,7 +449,7 @@
 		"es": "",
 		"ch": "命中",
 		"kr": "",
-		"ru": "",
+		"ru": "ТЧН",
 		"tr": "",
 		"de": "",
 		"ja": "",
@@ -466,7 +466,7 @@
 		"es": "Precisión de habilidad",
 		"ch": "技能命中",
 		"kr": "스킬 정확도",
-		"ru": "",
+		"ru": "Точность Навыка",
 		"tr": "",
 		"de": "",
 		"ja": "",
@@ -483,7 +483,7 @@
 		"es": "",
 		"ch": "技能命中",
 		"kr": "",
-		"ru": "",
+		"ru": "ТЧН НВК",
 		"tr": "",
 		"de": "",
 		"ja": "",
@@ -501,7 +501,7 @@
 		"ch": "闪避",
 		"kr": "회피",
 		"ru": "",
-		"tr": "",
+		"tr": "Уклонение",
 		"de": "",
 		"ja": "",
 		"pt": "",
@@ -517,7 +517,7 @@
 		"es": "",
 		"ch": "闪避",
 		"kr": "",
-		"ru": "",
+		"ru": "УКЛ",
 		"tr": "",
 		"de": "",
 		"ja": "",
@@ -535,7 +535,7 @@
 		"ch": "技能闪避",
 		"kr": "스킬 회피",
 		"ru": "",
-		"tr": "",
+		"tr": "Уклониене от навыка",
 		"de": "",
 		"ja": "",
 		"pt": "",
@@ -551,7 +551,7 @@
 		"es": "",
 		"ch": "技能闪避",
 		"kr": "",
-		"ru": "",
+		"ru": "УКЛ НВК",
 		"tr": "",
 		"de": "",
 		"ja": "",
@@ -568,7 +568,7 @@
 		"es": "Precisión crítica",
 		"ch": "暴击命中",
 		"kr": "치명타 정확도",
-		"ru": "",
+		"ru": "Точность крита",
 		"tr": "",
 		"de": "",
 		"ja": "",
@@ -585,7 +585,7 @@
 		"es": "",
 		"ch": "暴击命中",
 		"kr": "",
-		"ru": "",
+		"ru": "ТЧН КРИТ",
 		"tr": "",
 		"de": "",
 		"ja": "",
@@ -602,7 +602,7 @@
 		"es": "Precisión crítica de habilidad",
 		"ch": "技能暴击命中",
 		"kr": "스킬 치명타 정확도",
-		"ru": "",
+		"ru": "Точность Крита Навыка",
 		"tr": "",
 		"de": "",
 		"ja": "",
@@ -619,7 +619,7 @@
 		"es": "",
 		"ch": "技能暴击命中",
 		"kr": "",
-		"ru": "",
+		"ru": "ТЧН КРИТ НВК",
 		"tr": "",
 		"de": "",
 		"ja": "",
@@ -636,7 +636,7 @@
 		"es": "Evasión de críticos",
 		"ch": "暴击闪避",
 		"kr": "치명타 회피",
-		"ru": "",
+		"ru": "Уклонение от крита",
 		"tr": "",
 		"de": "",
 		"ja": "",
@@ -653,7 +653,7 @@
 		"es": "",
 		"ch": "暴击闪避",
 		"kr": "",
-		"ru": "",
+		"ru": "КРИТ УКЛ",
 		"tr": "",
 		"de": "",
 		"ja": "",
@@ -670,7 +670,7 @@
 		"es": "Evasión de críticos de habilidad",
 		"ch": "技能暴击闪避",
 		"kr": "스킬 치명타 회피",
-		"ru": "",
+		"ru": "Уклонение от Крита Навыка",
 		"tr": "",
 		"de": "",
 		"ja": "",
@@ -687,7 +687,7 @@
 		"es": "",
 		"ch": "技能暴击闪避",
 		"kr": "",
-		"ru": "",
+		"ru": "УКЛ КРИТ НВК",
 		"tr": "",
 		"de": "",
 		"ja": "",
@@ -704,7 +704,7 @@
 		"es": "Crit mejorado",
 		"ch": "暴击增强",
 		"kr": "!치명타 향상",
-		"ru": "",
+		"ru": "Усиление Крита",
 		"tr": "",
 		"de": "",
 		"ja": "",
@@ -721,7 +721,7 @@
 		"es": "",
 		"ch": "暴击增强",
 		"kr": "",
-		"ru": "",
+		"ru": "УСИЛ КРИТ",
 		"tr": "",
 		"de": "",
 		"ja": "",
@@ -738,7 +738,7 @@
 		"es": "Habilidad crítica mejorada",
 		"ch": "技能暴击增强",
 		"kr": "스킬 크리티컬 강화",
-		"ru": "",
+		"ru": "Повышение критического уровня навыков",
 		"tr": "",
 		"de": "",
 		"ja": "",
@@ -747,7 +747,7 @@
 		"ar": "",
 		"it": "",
 		"pl": "",
-		"th": "",
+		"th": ""
 	},
 	"UI.stat.SKILLCRITENCH.short": {
 		"en": "Skill CRIT ENCH",
@@ -755,7 +755,7 @@
 		"es": "",
 		"ch": "技能暴击增强",
 		"kr": "",
-		"ru": "",
+		"ru": "ПОВЫШ КРИТ НВК",
 		"tr": "",
 		"de": "",
 		"ja": "",
@@ -772,7 +772,7 @@
 		"es": "Reducción de críticos",
 		"ch": "暴击减免",
 		"kr": "치명타 감소",
-		"ru": "",
+		"ru": "Снижение критического урона",
 		"tr": "",
 		"de": "",
 		"ja": "",
@@ -781,7 +781,7 @@
 		"ar": "",
 		"it": "",
 		"pl": "",
-		"th": "",
+		"th": ""
 	},
 	"UI.stat.CRITRD.short": {
 		"en": "CRIT RD",
@@ -789,7 +789,7 @@
 		"es": "",
 		"ch": "暴击减免",
 		"kr": "",
-		"ru": "",
+		"ru": "СНИЖ КРИТ",
 		"tr": "",
 		"de": "",
 		"ja": "",
@@ -798,7 +798,7 @@
 		"ar": "",
 		"it": "",
 		"pl": "",
-		"th": "",
+		"th": ""
 	},
 	"UI.stat.SKILLCRITRD": {
 		"en": "Skill Crit Reduction",
@@ -806,7 +806,7 @@
 		"es": "Reducción de críticos de habilidad",
 		"ch": "技能暴击减免",
 		"kr": "스킬 크리티컬 감소",
-		"ru": "",
+		"ru": "Снижение критического урона",
 		"tr": "",
 		"de": "",
 		"ja": "",
@@ -815,7 +815,7 @@
 		"ar": "",
 		"it": "",
 		"pl": "",
-		"th": "",
+		"th": ""
 	},
 	"UI.stat.SKILLCRITRD.short": {
 		"en": "Skill CRIT RD",
@@ -823,7 +823,7 @@
 		"es": "",
 		"ch": "技能暴击减免",
 		"kr": "",
-		"ru": "",
+		"ru": "НВК КРИТ СНИЖ",
 		"tr": "",
 		"de": "",
 		"ja": "",
@@ -840,7 +840,7 @@
 		"es": "Ataque sagrado",
 		"ch": "神圣攻击",
 		"kr": "신성한 공격",
-		"ru": "",
+		"ru": "Священная атака",
 		"tr": "",
 		"de": "",
 		"ja": "",
@@ -857,7 +857,7 @@
 		"es": "",
 		"ch": "神圣攻击",
 		"kr": "",
-		"ru": "",
+		"ru": "СВЯЩ АТК",
 		"tr": "",
 		"de": "",
 		"ja": "",
@@ -874,7 +874,7 @@
 		"es": "Suerte",
 		"ch": "幸运值",
 		"kr": "운",
-		"ru": "",
+		"ru": "Удача",
 		"tr": "",
 		"de": "",
 		"ja": "",
@@ -891,7 +891,7 @@
 		"es": "",
 		"ch": "幸运值",
 		"kr": "",
-		"ru": "",
+		"ru": "УДАЧА",
 		"tr": "",
 		"de": "",
 		"ja": "",
