--- a/Translation/general.json
+++ b/Translation/general.json
@@ -5,7 +5,7 @@
 		"es": "",
 		"ch": "",
 		"kr": "",
-		"ru": "",
+		"ru": "Гильдия",
 		"tr": "",
 		"de": "",
 		"ja": "",
@@ -22,7 +22,7 @@
 		"es": "",
 		"ch": "",
 		"kr": "",
-		"ru": "",
+		"ru": "Группа",
 		"tr": "",
 		"de": "",
 		"ja": "",
@@ -39,7 +39,7 @@
 		"es": "",
 		"ch": "",
 		"kr": "",
-		"ru": "",
+		"ru": "Золото",
 		"tr": "",
 		"de": "",
 		"ja": "",
@@ -56,7 +56,7 @@
 		"es": "",
 		"ch": "",
 		"kr": "",
-		"ru": "",
+		"ru": "Жетоны",
 		"tr": "",
 		"de": "",
 		"ja": "",
@@ -73,7 +73,7 @@
 		"es": "",
 		"ch": "",
 		"kr": "",
-		"ru": "",
+		"ru": "Купоны",
 		"tr": "",
 		"de": "",
 		"ja": "",
@@ -90,7 +90,7 @@
 		"es": "",
 		"ch": "",
 		"kr": "",
-		"ru": "",
+		"ru": "Опыт",
 		"tr": "",
 		"de": "",
 		"ja": "",
@@ -107,7 +107,7 @@
 		"es": "",
 		"ch": "",
 		"kr": "",
-		"ru": "",
+		"ru": "Очки навыков",
 		"tr": "",
 		"de": "",
 		"ja": "",
@@ -124,7 +124,7 @@
 		"es": "",
 		"ch": "",
 		"kr": "",
-		"ru": "",
+		"ru": "Получить награду",
 		"tr": "",
 		"de": "",
 		"ja": "",
@@ -141,7 +141,7 @@
 		"es": "",
 		"ch": "",
 		"kr": "",
-		"ru": "",
+		"ru": "Награда за задание",
 		"tr": "",
 		"de": "",
 		"ja": "",
