--- a/Translation/general.json
+++ b/Translation/general.json
@@ -5,7 +5,7 @@
 		"es": "Gremio",
 		"ch": "",
 		"kr": "",
-		"ru": "Гильдия",
+		"ru": "ГѓГЁГ«ГјГ¤ГЁГї",
 		"tr": "",
 		"de": "",
 		"ja": "",
@@ -23,7 +23,7 @@
 		"es": "Grupo",
 		"ch": "",
 		"kr": "",
-		"ru": "Группа",
+		"ru": "ГѓГ°ГіГЇГЇГ ",
 		"tr": "",
 		"de": "",
 		"ja": "",
@@ -41,7 +41,7 @@
 		"es": "Oro",
 		"ch": "",
 		"kr": "",
-		"ru": "Золото",
+		"ru": "Г‡Г®Г«Г®ГІГ®",
 		"tr": "",
 		"de": "",
 		"ja": "",
@@ -59,7 +59,7 @@
 		"es": "",
 		"ch": "",
 		"kr": "",
-		"ru": "Жетоны",
+		"ru": "Г†ГҐГІГ®Г­Г»",
 		"tr": "",
 		"de": "",
 		"ja": "",
@@ -74,10 +74,10 @@
 	"general.CURRENCY.COUPON":{
 		"en": "Coupon",
 		"fr": "Coupon",
-		"es": "CupГіn",
+		"es": "CupГѓВіn",
 		"ch": "",
 		"kr": "",
-		"ru": "Купоны",
+		"ru": "ГЉГіГЇГ®Г­Г»",
 		"tr": "",
 		"de": "",
 		"ja": "",
@@ -95,7 +95,7 @@
 		"es": "Exp",
 		"ch": "",
 		"kr": "",
-		"ru": "Опыт",
+		"ru": "ГЋГЇГ»ГІ",
 		"tr": "",
 		"de": "",
 		"ja": "",
@@ -113,7 +113,7 @@
 		"es": "",
 		"ch": "",
 		"kr": "",
-		"ru": "Очки навыков",
+		"ru": "ГЋГ·ГЄГЁ Г­Г ГўГ»ГЄГ®Гў",
 		"tr": "",
 		"de": "",
 		"ja": "",
@@ -127,11 +127,11 @@
 	},
 	"general.quest.getReward":{
 		"en": "Get Reward",
-		"fr": "Obtenir la rГ©compense",
+		"fr": "Obtenir la rГѓВ©compense",
 		"es": "Obtener la recompensa",
 		"ch": "",
 		"kr": "",
-		"ru": "Получить награду",
+		"ru": "ГЏГ®Г«ГіГ·ГЁГІГј Г­Г ГЈГ°Г Г¤Гі",
 		"tr": "",
 		"de": "",
 		"ja": "",
@@ -145,11 +145,11 @@
 	},
 	"general.quest.reward":{
 		"en": "Quest Reward",
-		"fr": "RГ©compense de quГЄte",
+		"fr": "RГѓВ©compense de quГѓВЄte",
 		"es": "",
 		"ch": "",
 		"kr": "",
-		"ru": "Награда за задание",
+		"ru": "ГЌГ ГЈГ°Г Г¤Г  Г§Г  Г§Г Г¤Г Г­ГЁГҐ",
 		"tr": "",
 		"de": "",
 		"ja": "",
@@ -160,5 +160,5 @@
 		"pl": "",
 		"th": "",
 		"id": "",
-	},
+	}, 
 }
